# ticket-master

./: .gitignore  Cargo.toml  IMPLEMENTATION_STATUS.md  MIGRATION_SUMMARY.md  README_RUST.md  TODO.md  chat.txt
event-service/: Cargo.toml
event-service/src/: main.rs  service.rs  strategies.rs
reservation-service/: Cargo.toml
reservation-service/src/: main.rs  service.rs
src/: avro_schemas.rs  config.rs  config_parser.rs  error.rs  lib.rs  metrics.rs  retry.rs  shutdown.rs
src/domain/: event.rs  mod.rs  reservation.rs  schemas.rs
src/kafka/: avro_serializer.rs  consumer.rs  mod.rs  producer.rs  rocksdb_store.rs  streams.rs
tests/: integration_tests.rs
ticket-service/: Cargo.toml
ticket-service/src/: main.rs  service.rs
