[package]
name = "ticket-master"
version = "0.1.0"
edition = "2021"

[dependencies]
# Kafka client
rdkafka = { version = "0.36", features = ["cmake-build"] }
# Async runtime
tokio = { version = "1.0", features = ["full"] }
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Apache Avro
apache-avro = "0.16"
# Schema Registry client
schema_registry_converter = "4.0"
# HTTP server
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Error handling
anyhow = "1.0"
thiserror = "1.0"
# Configuration
config = "0.14"
# Time handling
chrono = { version = "0.4", features = ["serde"] }
# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }
# Collections
dashmap = "5.5"
# RocksDB for persistent state stores
rocksdb = "0.22"
# Java properties parser
java-properties = "2.0"
# CLI
clap = { version = "4.0", features = ["derive"] }
# Random number generation
rand = "0.8"
# Metrics and monitoring
prometheus = "0.13"
# Testing utilities
tempfile = "3.8"
# Async traits
async-trait = "0.1"

[workspace]
members = [
    "event-service",
    "reservation-service", 
    "ticket-service"
]
